<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.navandu.miscontactos.DetalleContacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:text="@string/contacto_nombre"
        android:textStyle="bold"
        android:textSize="@dimen/nombre_contacto"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="llamar">

        <ImageView
            android:id="@+id/imgIconTlf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_48"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:text="@string/contacto_telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/telefono_contacto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="enviarMail">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_48"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_email"
            android:id="@+id/tvEmail"
            android:layout_gravity="center_vertical"/>



    </LinearLayout>

</LinearLayout>
