<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFotoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img400x400"
            android:scaleType="centerCrop"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <ImageButton
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/like"
                android:id="@+id/btnLike"
                android:layout_alignParentLeft="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pnombre"
                    android:id="@+id/tvNombreContacto"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTlfContacto"
                    android:text="@string/ptelefono"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plike"
                android:id="@+id/tvLike"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="20sp"/>

        </RelativeLayout>

    </LinearLayout>




</android.support.v7.widget.CardView>